# cargo-build-dist

./: .gitattributes  Cargo.toml  Makefile  README.md  deny.toml  test-file
.github/workflows/: ci.yml  release.yml  verify.yml
examples/docker/: Cargo.toml
examples/mybinary/: Cargo.toml
examples/mybinary/src/: main.rs
examples/mybinary/src/bar/: main.rs
examples/mybinary/src/foo/: main.rs
examples/mylib/: Cargo.toml  tags.toml
examples/mylib/src/: lib.rs
examples/simple/: Cargo.toml
src/: context.rs  dependency.rs  dist_target.rs  errors.rs  executor.rs  hash.rs  lib.rs  main.rs  metadata.rs  package.rs  planner.rs  rust.rs  sources.rs  tags.rs  term.rs
src/aws_lambda/: dist_target.rs  metadata.rs  mod.rs  package.rs
src/docker/: dist_target.rs  metadata.rs  mod.rs  package.rs
src/planner/: @rust_panic  copy.rs  docker.rs  mod.rs
src/planner/docker/: ecr.rs  mod.rs
src/templates/: Dockerfile.template
src/test/: test-file
tests/fixtures/: tags.toml
