[workspace]
members = ["examples/*"]

[package]
name = "cargo-build-dist"
version = "0.1.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A cargo extension that helps with building distribution packages in various formats"
homepage = "https://github.com/legion-labs/cargo-build-dist"
repository = "https://github.com/legion-labs/cargo-build-dist"
keywords = ["cargo", "packaging", "distribution"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cargo_build_dist"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-build-dist"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
atty = "0.2"
aws_config = { version = "0.0.25-alpha", git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.25-alpha", package = "aws-config" }
aws_sdk_ecr = { version = "0.0.25-alpha", git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.25-alpha", package = "aws-sdk-ecr" }
aws_sdk_s3 = { version = "0.0.25-alpha", git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.25-alpha", package = "aws-sdk-s3" }
base64 = { version = "0.13.0" }
cargo = "0.57"
cargo_metadata = "0.14.0"
cargo_toml = "0.10"
clap = "2"
env_logger = "0.8.4"
fs_extra = "1.2"
futures = { version = "0.3.*" }
glob = "0.3"
itertools = "0.10"
log = "0.4.0"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1"
serde = "1"
serde-value = "0.7"
serde_json = "1"
serde_path_to_error = "0.1"
sha2 = "0.9"
tera = "1"
termcolor = "1.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
zip = "0.5"
