[workspace]
members = ["examples/*"]

[package]
name = "cargo-monorepo"
version = "0.2.0"
authors = ["Legion Labs <devs@legionlabs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A cargo extension that helps with managing monorepos"
homepage = "https://github.com/legion-labs/cargo-monorepo"
repository = "https://github.com/legion-labs/cargo-monorepo"
keywords = ["cargo", "packaging", "distribution", "monorepo"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cargo_monorepo"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-monorepo"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.51"
atty = "0.2.14"
aws-config = "0.3.0"
aws-sdk-ecr = "0.3.0"
aws-sdk-s3 = "0.3.0"
base64 = "0.13.0"
cargo = "0.58.0"
cargo_metadata = "0.14.1"
guppy = "0.12.4"
clap = "2.34.0"
env_logger = "0.9.0"
fs_extra = "1.2.0"
glob = "0.3.0"
itertools = "0.10.3"
log = "0.4.14"
git2 = { version = "0.13.25" }
regex = "1.5.4"
semver = "1.0.4"
serde = "1.0.131"
serde_json = "1.0.72"
serde_path_to_error = "0.1.5"
sha2 = "0.10.0"
toml = "0.5.8"
toml_edit = "0.12.0"
tera = "1.15.0"
termcolor = "1.1.2"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
walkdir = "2.3.2"
zip = "0.5.13"
