[package]
name = "mybinary"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
mylib = { path = "../mylib" }

[package.metadata.monorepo.simple-docker]
type = "docker"
template = """
FROM ubuntu:20.04
{{ copy_all_binaries }}
{{ copy_all_extra_files }}
CMD [{{ binaries.0 }}]
"""
allow_aws_ecr_creation = true
extra_files = [{ source = "src/subjects/*", destination = "/usr/src/app/" }]

[package.metadata.monorepo.simple-lambda]
type = "aws-lambda"
extra_files = [{ source = "src/subjects/*", destination = "/usr/src/app/" }]
