[package]
name = "mybinary"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "foo"
path = "src/foo/main.rs"

[[bin]]
name = "bar"
path = "src/bar/main.rs"

[dependencies]
anyhow = "1"
mylib = { path = "../mylib" }

[package.metadata.monorepo.tags]
"0.1.0" = "sha256:1816f92ac087a31eb270066946903210bcd306eeadafc8aa2cd5a0ad0c143470"

[package.metadata.monorepo.simple-docker]
type = "docker"
template = """
FROM ubuntu:20.04
{{ copy_all }}
CMD ["{{ binaries["foo"] }}"]
"""
allow_aws_ecr_creation = true
extra_files = [{ source = "src/subjects/*", destination = "/usr/src/app/" }]

[package.metadata.monorepo.simple-lambda]
type = "aws-lambda"
binary = "bar"
extra_files = [{ source = "src/subjects/*", destination = "/usr/src/app/" }]
