[package]
name = "simple"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

[package.metadata.monorepo]
deps_hash = "68e0fa4ba2903f04582cedb135190f6448a36553cb5065cd7031be549b7ca53c"

[package.metadata.monorepo.simple]
type = "docker"
registry = ""
template = """
FROM ubuntu:20.04
{{ copy_all_binaries }}
{{ copy_all_extra_files }}
CMD [{{ binaries.0 }}]
"""
allow_aws_ecr_creation = true
extra_files = [{ source = "src/test/*", destination = "/usr/src/app/" }]

[package.metadata.monorepo.simple-lambda]
type = "aws-lambda"
s3_bucket = ""
extra_files = [{ source = "src/test/*", destination = "/usr/src/app/" }]
